creacion más paginas

--- a/index.html
+++ b/index.html
@@ -10,5 +10,26 @@
         <h1>Titulo de sección</h1>
         <p>Este es un párrafo.</p>
     </div>
+    <table>
+        <thead>
+            <tr>
+                <th>Nombre</th>
+                <th>Dashboard</th>
+                <th>Resumen</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Indicadores</td>
+                <td>Cuadro de control</td>
+                <td>Lorem ipsum dolor sit amet</td>
+            </tr>
+            <tr>
+                <td>Indicadores</td>
+                <td>Cuadro de control</td>
+                <td>Lorem ipsum dolor sit amet</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
